# Graphene-topology

./: CMakeLists.txt  Makefile  README.md
include/: grapology.h  grapology_cap.hpp  grapology_error.hpp  grapology_locate.hpp  grapology_pool.hpp  grapology_set.hpp  grapology_topology.hpp  grapology_vector.hpp  grapology_vector3.hpp  grapology_vertex.hpp
src/: main.cpp
